# pypackage_template

./: README.md  pyproject.toml
experiments/: harness.py
experiments/configs/: harness.yaml
nbs/: sample.ipynb
test/: sample_test.py
